# OpenCl

./: CMakeLists.txt  README.md  consts.h  consts_mul.h  main.cpp  mul_matrix.cl  mul_matrix.cpp  prefix_sum.cl  prefix_sum.cpp
